tf_templates/files/templates/app-template/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ${name}
  labels:
    name: ${name}
spec:
  replicas: 3
  selector:
    matchLabels:
      name: ${name}
  template:
    metadata:
      labels:
        name: ${name}
    spec:
      containers:
        - image: ${repo}:${version}
          resources:
            limits:
              memory: 32Mi
              cpu: 1000m
          name: ${name}
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            httpGet:
              path: /
              port: http
      restartPolicy: Always
