tf_templates/files/templates/app-template/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${name}
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
  selector:
    name: ${name}
