tf_templates/files/templates/app-template/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ${name}
spec:
  rules:
  - host: develop.cjscloud.city
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: ${name}
            port:
              name: http
